10540
minimized:

{code}
Welcome to Scala version 2.11.0-M8 (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_65).
Type in expressions to have them evaluated.
Type :help for more information.

scala> class Foo(val x: String = "a") {
     |   def this(bla: Int*) {
     |     this("a")
     |   }
     | }
defined class Foo

scala> new Foo
<console>:10: error: ambiguous reference to overloaded definition,
both constructor Foo in class Foo of type (bla: Int*)Foo
and  constructor Foo in class Foo of type (x: String)Foo
match argument types ()
              new Foo
              ^
{code}

{code}
Welcome to Scala version 2.10.4-RC1 (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_65).
Type in expressions to have them evaluated.
Type :help for more information.

scala> class Foo(val x: String = "a") {
     |   def this(bla: Int*) {
     |     this("a")
     |   }
     | }
defined class Foo

scala> new Foo
res0: Foo = Foo@77892f2c
{code}
